--- a/other.html
+++ b/other.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/other-styles.css" />
   </head>
   <body>
-    <!-- <div class="container">
+    <div class="container">
       <p class="em">
         EM
         <span></span>
@@ -22,6 +22,6 @@
     <div>
       <p style="font-size: 40px; text-align: center;">ROOT/HTML</p>
     </div>
-    <script src="index.js"></script> -->
+    <script src="index.js"></script>
   </body>
 </html>
